--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "license": "BSD",
   "devDependencies": {
     "coffee-script": "^1.9.1"
-  }
+  },
+  "repository": "https://github.com/hildjj/mic-timer-hue.git",
+  "homepage": "https://github.com/hildjj/mic-timer-hue",
+  "bugs": "https://github.com/hildjj/mic-timer-hue/issues"
 }
