--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "mic-timer-hue",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Use Philips Hue lights to alert people in a microphone line that their time is up",
   "main": "index.js",
   "dependencies": {
-    "colors": "^1.0.3",
-    "commander": "^2.7.1",
-    "keypress": "^0.2.1",
-    "node-hue-api": "^1.0.5",
-    "q": "^1.2.0"
+    "colors": "*",
+    "commander": "*",
+    "keypress": "*",
+    "node-hue-api": "*",
+    "q": "*"
   },
   "bin": {
     "miket": "./bin/miket"
